# FLEEG

./: README.md  common.py  eval.py  fraud.py  graph.py  models.py  prompt_template.py  pyproject.toml
data/eval/: fraud.jsonl  normal.jsonl
