[tool.poetry]
name = "fleeg"
version = "0.1.0"
description = "Fraud call identification based on large language models and event evolution graphs"
authors = [xtuhcy@163.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
torch = {url="https://mirrors.aliyun.com/pytorch-wheels/cu121/torch-2.5.1+cu121-cp311-cp311-win_amd64.whl"}
pandas = "^2.3.1"
dashscope = "^1.24.0"
jinja2 = "^3.1.6"
networkx = "^3.5"
networkx-neo4j = "^0.0.2"
torch-geometric = "^2.6.1"
numpy = "1.26.4"
matplotlib = "^3.10.5"
scipy = "^1.16.1"
scikit-learn = "^1.7.1"
hdbscan = "^0.8.40"
jieba = "^0.42.1"
tqdm = "^4.67.1"
openai = "^1.99.9"
openpyxl = "^3.1.5"
mlxtend = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"